# czb-zarr-challenge

./: .gitignore  README.md  requirements.txt  setup.cfg
czb_zarr_challenge/: get_metadata.py  visualize.py
