[metadata]
name = omezarr-tools
version = 0.1.0
description = Tools and CLI for handling OME-Zarr (5D) data via iohub
long_description = file: README.md
long_description_content_type = text/markdown
author = Audrey Chun
author_email = audreychun@berkeley.edu
license = MIT
url = https://github.com/audreychun/omezarr-tools
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.11
install_requires =
    iohub>=0.3.0
    zarr>=2.13
    numpy>=1.21
    scikit-image>=0.19
    scipy>=1.7
    torch>=1.12
    tqdm>=4.64

[options.entry_points]
console_scripts =
    omezarr-cli = omezarr_tools.cli:main

## COME BACK TO THIS!
## modified from https://github.com/czbiohub-sf/iohub/blob/14940bdb909b01c9fd80beac17d33fbf85112d3b/setup.cfg 